Move JavaScript to separate file

--- a/index.html
+++ b/index.html
@@ -3,27 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Voting</title>
-    <script src=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   </head>
   <body>
     <div id="example"></div>
-    <script type="text/babel">
-      console.log('abc');
-
-      // GET https://36yfx8yfid.execute-api.eu-west-1.amazonaws.com/dev/topics/ivlPpLzsLb
-
-      // POST https://36yfx8yfid.execute-api.eu-west-1.amazonaws.com/dev/topics
-      // body: {
-      //  "title" : "doood",
-      //  "speaker" : "Michael Osl"
-      //}
-
-      // POST /dev/votes
-      // {
-      //     "id": ID
-      //     "vote": 1 // or -1
-      // }
-    </script>
+    <script type="text/babel" src="index.js"></script>
   </body>
 </html>
