--- a/index.html
+++ b/index.html
@@ -9,26 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   </head>
   <body>
-    <table ng-init="topics=[{title:'Awesome',speaker:'Moee',score:'8'},{title:'More Awesome',speaker:'Karl',score:'12'},{title:'The Most Awesome',speaker:'Sanja',score:'19'}]">
-      <tr>
-        <th>Topic</th>
-        <th>Speaker</th>
-        <th>Vote</th>
-        <th>Score</th>
-      </tr>
-      <tr ng-repeat="topic in topics">
-        <td ng-bind="::topic.title"><i class="material-icons">toc</i></td>
-        <td ng-bind="::topic.speaker"><i class="material-icons">account_circle</i></td>
-        <td><voter><button ng-click="voter.downVote(topic)"><i class="material-icons">thumb_down</i></button><button ng-click="voter.upVote(topic)"><i class="material-icons">thumb_up</i></button></voter></td>
-        <td ng-bind="::topic.score"><i class="material-icons">star</i></td>
-      </tr>
-      <tr>
-        <td><input ng-model="newTopic.title"></td>
-        <td><input ng-model="newTopic.speaker"></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <voting-topics></voting-topics>
+
     <script type="text/babel" src="index.js"></script>
   </body>
 </html>
